--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
     </div>
   </div>
 
-  <section class="section section-dark" id="team">
+  <!--
+  <section class="section section-dark" id="ABOUT">
     <h2>ABOUT THE GAME</h2>
   </section>
 
@@ -36,10 +37,36 @@
       </span>
     </div>
   </div>
-
-  <section class="section section-dark">
+-->
+  <section class="section section-dark" id="team">
     <h2>MEET THE TEAM</h2>
   </section>
+  <div class="row">
+    <div class="column">
+      <img src="wedding.jpg">
+      <img src="rocks.jpg">
+      <img src="falls2.jpg">
+      <img src="paris.jpg">
+
+    </div>
+    <div class="column">
+      <img src="underwater.jpg">
+      <img src="ocean.jpg">
+      <img src="wedding.jpg">
+      <img src="mountainskies.jpg">
+    </div>
+    <div class="column">
+      <img src="wedding.jpg">
+      <img src="rocks.jpg">
+      <img src="falls2.jpg">
+      <img src="paris.jpg">
+    </div>
+    <div class="column">
+      <img src="wedding.jpg">
+      <img src="rocks.jpg">
+      <img src="falls2.jpg">
+      <img src="paris.jpg">
+    </div>
 
   <div class="pimg3">
     <div class="ptext">
@@ -56,13 +83,6 @@
     </p>
   </section>
 
-  <div class="pimg1">
-    <div class="ptext">
-      <span class="border">
-        Traversy Media
-      </span>
-    </div>
-  </div>
 </body>
 
 </html>
