--- a/index.html
+++ b/index.html
@@ -12,9 +12,7 @@
 <body>
   <div class="title">
     <div id="titletext">
-      <span class="border">
-        "PROJECT TRENCHCOAT"
-      </span>
+      <h> "PROJECT TRENCHCOAT" </h>
       <p> (it's a work in progress!) </p>
      <!-- <div style="text-align:center; padding-top: 70px;">
         <a href="#about" class="button1"> ABOUT </a>
@@ -39,35 +37,105 @@
   </div>
 -->
   <section class="section section-dark" id="team">
-    <h2>MEET THE TEAM</h2>
+    <h2>HELLO</h2>
   </section>
+
   <div class="row">
+      <figure>
+          <img src="img/christie.JPG" alt='missing' />
+          <figcaption>Christie Xu
+              <br>Director, Head Artist
+              <br>xuchrist@usc.edu</figcaption>
+      </figure>
+      <figure>
+          <img src="img/corvyn.JPG" alt='missing' />
+          <figcaption>Corvyn Kusuma
+              <br>Head Engineer
+              <br>ckusuma@usc.edu</figcaption>
+      </figure>
+      <figure>
+          <img src="img/simon.JPG" alt='missing' />
+          <figcaption>Simon Chan
+              <br>Head UX Researcher
+              <br>chansimo@usc.edu</figcaption>
+      </figure>
+      <figure>
+          <img src="img/michael.JPG" alt='missing' />
+          <figcaption>Michael Perce
+              <br>Head Designer
+              <br>perce@usc.edu</figcaption>
+      </figure>
+      <figure>
+          <img src="img/nate.JPG" alt='missing' />
+          <figcaption>Nate Ross
+              <br>Head Producer
+              <br>nathan.ross.2020@marshall.usc.edu</figcaption>
+      </figure>
+      <figure>
+          <img src="img/christine.JPG" alt='missing' />
+          <figcaption>Christine Ying
+              <br>Engineer
+              <br>yingchri@usc.edu</figcaption>
+      </figure>
+      <figure>
+          <img src="img/arthur.jpg" alt='missing' />
+          <figcaption>Arthur Akopyan
+              <br>Engineer
+              <br>arthurak@usc.edu</figcaption>
+      </figure>
+      <figure>
+          <img src="img/connor.jpg" alt='missing' />
+          <figcaption>Connor Valore-Kemmerer
+              <br>Engineer
+              <br>valoreke@usc.edu</figcaption>
+      </figure>
+      <figure>
+          <img src="img/phani.jpg" alt='missing' />
+          <figcaption>Phani Sudhakar
+              <br>Assistant Producer
+              <br>vishnubh@usc.edu</figcaption>
+      </figure>
+      <figure>
+          <img src="img/payton.JPG" alt='missing' />
+          <figcaption>Phathorn (Payton) Thammasorn
+              <br>Engineer
+              <br>pthammas@usc.edu</figcaption>
+      </figure>
+      <figure>
+          <img src="img/alex.JPG" alt='missing' />
+          <figcaption>Alex Lyon
+              <br>Engineer
+              <br>lyona@usc.edu</figcaption>
+      </figure>
+      <figure>
+          <img src="img/filler.JPG" alt='missing' />
+          <figcaption>.
+              <br>.
+              <br>.</figcaption>
+      </figure>
+              
+     <!--
     <div class="column">
-      <img src="wedding.jpg">
-      <img src="rocks.jpg">
-      <img src="falls2.jpg">
-      <img src="paris.jpg">
-
+      <img src="img/christie.jpg">
+      <img src="img/corvyn.jpg">
+      <img src="img/simon.jpg">
+      <img src="img/michael.jpg">
     </div>
     <div class="column">
-      <img src="underwater.jpg">
-      <img src="ocean.jpg">
-      <img src="wedding.jpg">
-      <img src="mountainskies.jpg">
+      <img src="img/nate.jpg">
+      <img src="img/christine.jpg">
+      <img src="img/arthur.jpg">
+      <img src="img/connor.jpg">
+      
     </div>
     <div class="column">
-      <img src="wedding.jpg">
-      <img src="rocks.jpg">
-      <img src="falls2.jpg">
-      <img src="paris.jpg">
-    </div>
-    <div class="column">
-      <img src="wedding.jpg">
-      <img src="rocks.jpg">
-      <img src="falls2.jpg">
-      <img src="paris.jpg">
-    </div>
-
+      <img src="img/phani.jpg">
+      <img src="img/payton.jpg">
+      <img src="img/alex.jpg">
+      <img src="img/filler.jpg">
+    </div> -->
+  </div>
+<!--
   <div class="pimg3">
     <div class="ptext">
       <span class="border trans">
@@ -81,7 +149,7 @@
     <p>
       Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt, laudantium, quibusdam? Nobis, delectus, commodi, fugit amet tempora facere dolores nisi facilis consequatur, odio hic minima nostrum. Perferendis eos earum praesentium, blanditiis sapiente labore aliquam ipsa architecto vitae. Minima soluta temporibus voluptates inventore commodi cumque esse suscipit optio aliquam et, dolorem a cupiditate nihil fuga laboriosam fugiat placeat dignissimos! Unde eveniet placeat quisquam blanditiis voluptatem doloremque fugiat dolor repellendus ratione in.
     </p>
-  </section>
+  </section> -->
 
 </body>
 
