--- a/index.html
+++ b/index.html
@@ -42,37 +42,37 @@
 
   <div class="row">
       <figure>
-          <img src="img/christie.JPG" alt='missing' />
+          <img src="img/christie.jpg" alt='missing' />
           <figcaption>Christie Xu
               <br>Director, Head Artist
               <br>xuchrist@usc.edu</figcaption>
       </figure>
       <figure>
-          <img src="img/corvyn.JPG" alt='missing' />
+          <img src="img/corvyn.jpg" alt='missing' />
           <figcaption>Corvyn Kusuma
               <br>Head Engineer
               <br>ckusuma@usc.edu</figcaption>
       </figure>
       <figure>
-          <img src="img/simon.JPG" alt='missing' />
+          <img src="img/simon.jpg" alt='missing' />
           <figcaption>Simon Chan
               <br>Head UX Researcher
               <br>chansimo@usc.edu</figcaption>
       </figure>
       <figure>
-          <img src="img/michael.JPG" alt='missing' />
+          <img src="img/michael.jpg" alt='missing' />
           <figcaption>Michael Perce
               <br>Head Designer
               <br>perce@usc.edu</figcaption>
       </figure>
       <figure>
-          <img src="img/nate.JPG" alt='missing' />
+          <img src="img/nate.jpg" alt='missing' />
           <figcaption>Nate Ross
               <br>Head Producer
               <br>nathan.ross.2020@marshall.usc.edu</figcaption>
       </figure>
       <figure>
-          <img src="img/christine.JPG" alt='missing' />
+          <img src="img/christine.jpg" alt='missing' />
           <figcaption>Christine Ying
               <br>Engineer
               <br>yingchri@usc.edu</figcaption>
@@ -96,19 +96,19 @@
               <br>vishnubh@usc.edu</figcaption>
       </figure>
       <figure>
-          <img src="img/payton.JPG" alt='missing' />
+          <img src="img/payton.jpg" alt='missing' />
           <figcaption>Phathorn (Payton) Thammasorn
               <br>Engineer
               <br>pthammas@usc.edu</figcaption>
       </figure>
       <figure>
-          <img src="img/alex.JPG" alt='missing' />
+          <img src="img/alex.jpg" alt='missing' />
           <figcaption>Alex Lyon
               <br>Engineer
               <br>lyona@usc.edu</figcaption>
       </figure>
       <figure>
-          <img src="img/filler.JPG" alt='missing' />
+          <img src="img/filler.jpg" alt='missing' />
           <figcaption>.
               <br>.
               <br>.</figcaption>
