--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
   <div class="row">
       <figure>
-          <img src="img/christie.jpg" alt='missing' />
+          <img src="img/christie.JPG" alt='missing' />
           <figcaption>Christie Xu
               <br>Director, Head Artist
               <br>xuchrist@usc.edu</figcaption>
