--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       <figure>
           <img src="img/simon.jpg" alt='missing' />
           <figcaption>Simon Chan
-              <br>Head UX Researcher
+              <br>Head UX Researcher, Engineer
               <br>chansimo@usc.edu</figcaption>
       </figure>
       <figure>
@@ -86,7 +86,7 @@
       <figure>
           <img src="img/connor.jpg" alt='missing' />
           <figcaption>Connor Valore-Kemmerer
-              <br>Engineer
+              <br>Engineer, Marketer
               <br>valoreke@usc.edu</figcaption>
       </figure>
       <figure>
