--- a/index.html
+++ b/index.html
@@ -23,21 +23,20 @@
     </div>
   </div>
 
-  <!--
   <section class="section section-dark" id="ABOUT">
-    <h2>ABOUT THE GAME</h2>
+    <h2>PSSSTTTT...</h2>
   </section>
 
   <div class="pimg2">
     <div class="ptext">
-      <span class="border trans">
-        UHHH I'LL FIGURE A BETTER DESCRIPTION FOR HERE LATER<br>
+      <span class="border trans" style="color:black;">
+        IT'S GONNA BE A GAME ABOUT 2 KIDS IN A TRENCHCOAT. :) <br>
       </span>
     </div>
   </div>
--->
+
   <section class="section section-dark" id="team">
-    <h2>HELLO</h2>
+    <h2>THE PEOPLE DOIN' STUFF</h2>
   </section>
 
   <div class="row">
