--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
 
   <section class="section section-dark" id="team">
     <h2>THE PEOPLE DOIN' STUFF</h2>
-    <a style="color: rgb(62, 197, 255);" href="https://drive.google.com/drive/u/0/folders/0B4IWCbMRJfFmfk54eEFrdTJjOXdLdjUzaTVmeHBmdWdfYjNMUGtnZ3oxclY2bzNCNVA3WTA">CLICK HERE FOR RESUMES FROM ENGINEERING EXPO</a>
+   <!-- <a style="color: rgb(62, 197, 255);" href="https://drive.google.com/drive/u/0/folders/0B4IWCbMRJfFmfk54eEFrdTJjOXdLdjUzaTVmeHBmdWdfYjNMUGtnZ3oxclY2bzNCNVA3WTA">CLICK HERE FOR RESUMES FROM ENGINEERING EXPO</a>
+   -->
   </section>
 
   <div class="row">
@@ -90,12 +91,6 @@
               <br>valoreke@usc.edu</figcaption>
       </figure>
       <figure>
-          <img src="img/phani.jpg" alt='missing' />
-          <figcaption>Phani Sudhakar
-              <br>Assistant Producer
-              <br>vishnubh@usc.edu</figcaption>
-      </figure>
-      <figure>
           <img src="img/payton.jpg" alt='missing' />
           <figcaption>Phathorn (Payton) Thammasorn
               <br>Engineer
@@ -113,6 +108,12 @@
               <br>.
               <br>.</figcaption>
       </figure>
+      <figure>
+        <img src="img/filler.jpg" alt='missing' />
+        <figcaption>.
+            <br>.
+            <br>.</figcaption>
+    </figure>
               
      <!--
     <div class="column">
