--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
       <div class="row"> <!--row 1-->
         <div class="col-sm">
           <div class="team-member">
-            <img class="rounded-circle" src="img/team/christie.jpg" alt="">
+            <img class="rounded-circle" src="img/team/christie.JPG" alt="">
             <h4>Christie Xu</h4>
             <p class="text-muted">Creative Director, Lead Artist</p>
             <ul class="list-inline social-buttons">
