--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         <div class="row align-items-center">
           <div class="col-lg-6 order-lg-2">
             <div class="p-5">
-              <img class="img-fluid rounded" src="img/filler1.png" alt="">
+              <img class="img-fluid rounded" src="img/kids.png" alt="">
             </div>
           </div>
           <div class="col-lg-6 order-lg-1">
@@ -117,7 +117,7 @@
   <section class="bg-white page-section2" id="team">
     <div class="container text-center">
         <a class="portfolio-link hoverer" data-toggle="modal" href="#portfolioModal1">
-          <img class="img-fluid" src="img/Fampic_v2.png" alt="">
+          <img class="img-fluid" src="img/Fampic.png" alt="">
         </a>
         <div class="portfolio-caption">
           <h4>A FAMILY PHOTO</h4>
@@ -255,17 +255,17 @@
                       <ul class="list-inline social-buttons">
                         <li class="list-inline-item">
                           <a href="#">
-                            <i class="fab fa-twitter"></i>
-                          </a>
-                        </li>
-                        <li class="list-inline-item">
-                          <a href="#">
-                            <i class="fab fa-facebook-f"></i>
+                            <i class="far fa-user-circle"></i>
                           </a>
                         </li>
                         <li class="list-inline-item">
                           <a href="#">
                             <i class="fab fa-linkedin-in"></i>
+                          </a>
+                        </li>
+                        <li class="list-inline-item">
+                          <a href="#">
+                            <i class="fab fa-instagram"></i>
                           </a>
                         </li>
                       </ul>
