--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         <div class="row align-items-center">
           <div class="col-lg-6 order-lg-2">
             <div class="p-5">
-              <img class="img-fluid rounded" src="img/kids.png" alt="">
+              <img class="img-fluid rounded" src="img/Kids.png" alt="">
             </div>
           </div>
           <div class="col-lg-6 order-lg-1">
@@ -254,17 +254,17 @@
                       <p class="text-muted">Creative Director, Lead Artist</p>
                       <ul class="list-inline social-buttons">
                         <li class="list-inline-item">
-                          <a href="#">
+                          <a href="https://xtxu.space/" target="_blank">
                             <i class="far fa-user-circle"></i>
                           </a>
                         </li>
                         <li class="list-inline-item">
-                          <a href="#">
+                          <a href="https://www.linkedin.com/in/christiexu/" target="_blank">
                             <i class="fab fa-linkedin-in"></i>
                           </a>
                         </li>
                         <li class="list-inline-item">
-                          <a href="#">
+                          <a href="https://www.instagram.com/xtxu.art/" target="_blank">
                             <i class="fab fa-instagram"></i>
                           </a>
                         </li>
