--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
                     <div class="team-member">
                       <img class="mx-auto rounded" src="img/team/christie.JPG" alt="">
                       <h4>Christie Xu</h4>
-                      <p class="text-muted">Creative Director, Lead Artist</p>
+                      <p class="text-muted">Director, Lead Artist (2D/3D)</p>
                       <ul class="list-inline social-buttons">
                         <li class="list-inline-item">
                           <a href="https://xtxu.space/" target="_blank">
@@ -326,17 +326,12 @@
                       <p class="text-muted">Lead Designer</p>
                       <ul class="list-inline social-buttons">
                         <li class="list-inline-item">
-                          <a href="#">
-                            <i class="fab fa-twitter"></i>
+                          <a href="https://PerceGaming.com" target="_blank">
+                            <i class="far fa-user-circle"></i>
                           </a>
                         </li>
                         <li class="list-inline-item">
-                          <a href="#">
-                            <i class="fab fa-facebook-f"></i>
-                          </a>
-                        </li>
-                        <li class="list-inline-item">
-                          <a href="#">
+                          <a href="https://www.linkedin.com/in/MichaelPerce" target="_blank">
                             <i class="fab fa-linkedin-in"></i>
                           </a>
                         </li>
@@ -352,17 +347,7 @@
                       <p class="text-muted">Lead Producer</p>
                       <ul class="list-inline social-buttons">
                         <li class="list-inline-item">
-                          <a href="#">
-                            <i class="fab fa-twitter"></i>
-                          </a>
-                        </li>
-                        <li class="list-inline-item">
-                          <a href="#">
-                            <i class="fab fa-facebook-f"></i>
-                          </a>
-                        </li>
-                        <li class="list-inline-item">
-                          <a href="#">
+                          <a href="https://www.linkedin.com/in/nateross2020/" target="_blank">
                             <i class="fab fa-linkedin-in"></i>
                           </a>
                         </li>
@@ -376,18 +361,13 @@
                       <p class="text-muted">Engineer, Marketer</p>
                       <ul class="list-inline social-buttons">
                         <li class="list-inline-item">
-                          <a href="#">
-                            <i class="fab fa-twitter"></i>
-                          </a>
-                        </li>
-                        <li class="list-inline-item">
-                          <a href="#">
-                            <i class="fab fa-facebook-f"></i>
-                          </a>
-                        </li>
-                        <li class="list-inline-item">
-                          <a href="#">
+                          <a href="https://www.linkedin.com/in/connorvk/" target="_blank">
                             <i class="fab fa-linkedin-in"></i>
+                          </a>
+                        </li>
+                        <li class="list-inline-item">
+                          <a href="https://twitter.com/VKConnor" target="_blank">
+                            <i class="fab fa-twitter" ></i>
                           </a>
                         </li>
                       </ul>
@@ -397,7 +377,7 @@
                     <div class="team-member">
                       <img class="mx-auto rounded" src="img/team/christine.jpg" alt="">
                       <h4>Christine Ying</h4>
-                      <p class="text-muted">Engineer, 3D Artist</p>
+                      <p class="text-muted">Engineer, Artist (3D)</p>
                       <ul class="list-inline social-buttons">
                         <li class="list-inline-item">
                           <a href="#">
@@ -451,17 +431,12 @@
                       <p class="text-muted">Engineer</p>
                       <ul class="list-inline social-buttons">
                         <li class="list-inline-item">
-                          <a href="#">
-                            <i class="fab fa-twitter"></i>
+                          <a href="https://bit.ly/ptdesign" target="_blank">
+                            <i class="far fa-user-circle"></i>
                           </a>
                         </li>
                         <li class="list-inline-item">
-                          <a href="#">
-                            <i class="fab fa-facebook-f"></i>
-                          </a>
-                        </li>
-                        <li class="list-inline-item">
-                          <a href="#">
+                          <a href="https://www.linkedin.com/in/phathorn-thammasorn" target="_blank">
                             <i class="fab fa-linkedin-in"></i>
                           </a>
                         </li>
