--- a/index.html
+++ b/index.html
@@ -196,18 +196,13 @@
         <div class="col-md-4">
           <ul class="list-inline social-buttons">
             <li class="list-inline-item">
-              <a href="#">
-                <i class="fab fa-twitter"></i>
-              </a>
-            </li>
-            <li class="list-inline-item">
-              <a href="#">
+              <a href="fb.com/shortstackedgame/" target="_blank">
                 <i class="fab fa-facebook-f"></i>
               </a>
             </li>
             <li class="list-inline-item">
-              <a href="#">
-                <i class="fab fa-linkedin-in"></i>
+              <a href="https://www.instagram.com/shortstackedgame/" target="_blank">
+                <i class="fab fa-instagram"></i>
               </a>
             </li>
           </ul>
@@ -449,11 +444,6 @@
                       <h4>Alex Lyon</h4>
                       <p class="text-muted">Engineer</p>
                       <ul class="list-inline social-buttons">
-                        <li class="list-inline-item">
-                          <a href="#">
-                            <i class="fab fa-twitter"></i>
-                          </a>
-                        </li>
                         <li class="list-inline-item">
                           <a href="#">
                             <i class="fab fa-facebook-f"></i>
