--- a/index.html
+++ b/index.html
@@ -126,19 +126,21 @@
     </div>
   </section>
 
-  <!-- ADDITIONAL LOGOS????  -->
-  <section class="py-5">
+  <!-- ADDITIONAL LOGOS????  
+  <section class="page-section" style="background-color: #ffefdb;">
     <div class="container">
       <div class="row">
         <div class="col-md-3 col-sm-6">
           <a href="#">
             <img class="img-fluid d-block mx-auto" src="img/logos/logo0.png" style="width:auto;" alt="">
           </a>
-          </a>
+        </div>
+        <div class="col">
+          <h>  </h>
         </div>
       </div>
     </div>
-  </section>
+  </section> -->
 
   <!-- Contact -->
   <section class="page-section" id="contact">
@@ -183,7 +185,7 @@
         </div>
       </div>
     </div>
-  </section>
+  </section> 
 
 
   <!-- Footer -->
@@ -191,7 +193,7 @@
     <div class="container">
       <div class="row align-items-center">
         <div class="col-md-4">
-          <span class="copyright">Copyright &copy; ShortStacked 2019</span>
+          <span class="copyright">shortstackedgame@gmail.com</span>
         </div>
         <div class="col-md-4">
           <ul class="list-inline social-buttons">
@@ -273,17 +275,12 @@
                       <p class="text-muted">Lead Engineer</p>
                       <ul class="list-inline social-buttons">
                         <li class="list-inline-item">
-                          <a href="#">
-                            <i class="fab fa-twitter"></i>
+                          <a href="https://ckusuma.github.io/" target="_blank">
+                            <i class="fab fa-user-circle"></i>
                           </a>
                         </li>
                         <li class="list-inline-item">
-                          <a href="#">
-                            <i class="fab fa-facebook-f"></i>
-                          </a>
-                        </li>
-                        <li class="list-inline-item">
-                          <a href="#">
+                          <a href="https://www.linkedin.com/in/corvyn-kusuma-4a121b77/" target="_blank">
                             <i class="fab fa-linkedin-in"></i>
                           </a>
                         </li>
@@ -375,18 +372,8 @@
                       <p class="text-muted">Engineer, Artist (3D)</p>
                       <ul class="list-inline social-buttons">
                         <li class="list-inline-item">
-                          <a href="#">
-                            <i class="fab fa-twitter"></i>
-                          </a>
-                        </li>
-                        <li class="list-inline-item">
-                          <a href="#">
-                            <i class="fab fa-facebook-f"></i>
-                          </a>
-                        </li>
-                        <li class="list-inline-item">
-                          <a href="#">
-                            <i class="fab fa-linkedin-in"></i>
+                          <a href="img/team/Christine_Resume2019.pdf" target="_blank">
+                            <i class="far fa-file-alt"></i>
                           </a>
                         </li>
                       </ul>
@@ -399,17 +386,12 @@
                       <p class="text-muted">Engineer</p>
                       <ul class="list-inline social-buttons">
                         <li class="list-inline-item">
-                          <a href="#">
-                            <i class="fab fa-twitter"></i>
+                          <a href="http://www.arthurakopyan.com" target="_blank">
+                            <i class="far fa-user-circle"></i>
                           </a>
                         </li>
                         <li class="list-inline-item">
-                          <a href="#">
-                            <i class="fab fa-facebook-f"></i>
-                          </a>
-                        </li>
-                        <li class="list-inline-item">
-                          <a href="#">
+                          <a href="http://www.linkedin.com/in/arthur-akopyan-108a4b129" target="_blank">
                             <i class="fab fa-linkedin-in"></i>
                           </a>
                         </li>
@@ -444,16 +426,7 @@
                       <h4>Alex Lyon</h4>
                       <p class="text-muted">Engineer</p>
                       <ul class="list-inline social-buttons">
-                        <li class="list-inline-item">
-                          <a href="#">
-                            <i class="fab fa-facebook-f"></i>
-                          </a>
-                        </li>
-                        <li class="list-inline-item">
-                          <a href="#">
-                            <i class="fab fa-linkedin-in"></i>
-                          </a>
-                        </li>
+                          <!--needs links-->
                       </ul>
                     </div>
                   </div>
