--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
                       <ul class="list-inline social-buttons">
                         <li class="list-inline-item">
                           <a href="https://ckusuma.github.io/" target="_blank">
-                            <i class="fab fa-user-circle"></i>
+                            <i class="far fa-user-circle"></i>
                           </a>
                         </li>
                         <li class="list-inline-item">
@@ -294,17 +294,7 @@
                       <p class="text-muted">Lead UX Researcher, Engineer</p>
                       <ul class="list-inline social-buttons">
                         <li class="list-inline-item">
-                          <a href="#">
-                            <i class="fab fa-twitter"></i>
-                          </a>
-                        </li>
-                        <li class="list-inline-item">
-                          <a href="#">
-                            <i class="fab fa-facebook-f"></i>
-                          </a>
-                        </li>
-                        <li class="list-inline-item">
-                          <a href="#">
+                          <a href="https://www.linkedin.com/in/simonchan123/" target="_blank">
                             <i class="fab fa-linkedin-in"></i>
                           </a>
                         </li>
@@ -427,6 +417,49 @@
                       <p class="text-muted">Engineer</p>
                       <ul class="list-inline social-buttons">
                           <!--needs links-->
+                      </ul>
+                    </div>
+                  </div>
+                  <div class="col-sm">
+                    <div class="team-member">
+                      <img class="mx-auto rounded" src="img/team/jessica.png" alt="">
+                      <h4>Jessica Shih</h4>
+                      <p class="text-muted">Artist (2D)</p>
+                      <ul class="list-inline social-buttons">
+                        <li class="list-inline-item">
+                          <a href="https://jessicashihart.com" target="_blank">
+                            <i class="far fa-user-circle"></i>
+                          </a>
+                        </li>
+                        <li class="list-inline-item">
+                          <a href="https://www.linkedin.com/in/jessicashihart" target="_blank">
+                            <i class="fab fa-linkedin-in"></i>
+                          </a>
+                        </li>
+                        <li class="list-inline-item">
+                          <a href="https://www.instagram.com/jessicashihart/" target="_blank">
+                            <i class="fab fa-instagram"></i>
+                          </a>
+                        </li>
+                      </ul>
+                    </div>
+                  </div>
+                  <div class="col-sm">
+                    <div class="team-member">
+                      <img class="mx-auto rounded" src="img/team/fiona.JPG" alt="">
+                      <h4>Fiona Chen</h4>
+                      <p class="text-muted">Artist (2D)</p>
+                      <ul class="list-inline social-buttons">
+                        <li class="list-inline-item">
+                          <a href="https://fionawlchen.wixsite.com/mysite" target="_blank">
+                            <i class="far fa-user-circle"></i>
+                          </a>
+                        </li>
+                        <li class="list-inline-item">
+                          <a href="https://www.instagram.com/fionawlchen/" target="_blank">
+                            <i class="fab fa-instagram"></i>
+                          </a>
+                        </li>
                       </ul>
                     </div>
                   </div>
