--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <meta name="author" content="">
 
   <title>ShortStacked</title>
+  <link rel="icon" href="img/logos/logo0.png"> <!--temp-->
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -28,7 +29,7 @@
 
 <body id="page-top">
 
-  <!-- Navigation -->
+  <!-- NAVBAR -->
   <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
     <div class="container">
       <a class="navbar-brand js-scroll-trigger" href="#page-top">
@@ -142,7 +143,7 @@
     </div>
   </section> -->
 
-  <!-- Contact -->
+  <!-- CONTACT FORM -->
   <section class="page-section" id="contact">
     <div class="container">
       <div class="row">
@@ -188,7 +189,7 @@
   </section> 
 
 
-  <!-- Footer -->
+  <!-- FOOTER -->
   <footer class="footer">
     <div class="container">
       <div class="row align-items-center">
@@ -198,7 +199,7 @@
         <div class="col-md-4">
           <ul class="list-inline social-buttons">
             <li class="list-inline-item">
-              <a href="fb.com/shortstackedgame/" target="_blank">
+              <a href="https://fb.com/shortstackedgame/" target="_blank">
                 <i class="fab fa-facebook-f"></i>
               </a>
             </li>
@@ -516,10 +517,8 @@
                 </ul>
               </div>
             </div>
-
           </div>
     
-
           <div class="modal-footer">
              <!--close-->
              <button class="btn btn-primary" data-dismiss="modal" type="button">
