--- a/index.html
+++ b/index.html
@@ -127,21 +127,64 @@
     </div>
   </section>
 
-  <!-- ADDITIONAL LOGOS????  
-  <section class="page-section" style="background-color: #ffefdb;">
+  <!-- ADDITIONAL LOGOS????  -->
+  <section class="page-section" style="background-color: #f8dbcf;">
     <div class="container">
-      <div class="row">
-        <div class="col-md-3 col-sm-6">
-          <a href="#">
-            <img class="img-fluid d-block mx-auto" src="img/logos/logo0.png" style="width:auto;" alt="">
-          </a>
+      <div class="row text-center">
+        <div class="col-sm-4 col-md-2 hoverer2" >
+          <a href="https://www.facebook.com/SerpentShowdown/" target="_blank">
+            <img class="img-fluid icon" src="img/icons/serpentshowdown.png"> </a>
         </div>
-        <div class="col">
-          <h>  </h>
+        <div class="col-sm-4 col-md-2 hoverer2" >
+          <a href="https://www.retronomicon.games/" target="_blank">
+            <img class="img-fluid icon" src="img/icons/retronomicon.png"> </a>
+        </div>
+        <div class="col-sm-4 col-md-2 hoverer2" >
+          <a href="https://www.bottlesgame.com/" target="_blank">
+            <img class="img-fluid icon" src="img/icons/bottles.png"> </a>
+        </div>
+        <div class="col-sm-4 col-md-2 hoverer2" >
+          <a href="" target="_blank">
+            <img class="img-fluid icon" src="img/icons/koa.png"> </a>
+        </div>
+        <div class="col-sm-4 col-md-2 hoverer2" >
+          <a href="" target="_blank">
+            <img class="img-fluid icon" src="img/icons/witchlist.png"> </a>
+        </div>
+        <div class="col-sm-4 col-md-2 hoverer2" >
+          <a href="https://www.playginkgo.com/" target="_blank">
+            <img class="img-fluid icon" src="img/icons/ginkgo.png"> </a>
         </div>
       </div>
+      <div class="row text-center">
+        <div class="col-sm-4 col-md-1" >
+        </div>
+        <div class="col-sm-4 col-md-2 hoverer2" >
+          <a href="https://www.beastsofmaravillaisland.com/" target="_blank">
+            <img class="img-fluid icon" src="img/icons/beasts.png"> </a>
+        </div>
+        <div class="col-sm-4 col-md-2 hoverer2" >
+          <a href="#" target="_blank">
+            <img class="img-fluid icon" src="img/icons/candle.png"> </a>
+        </div>
+        <div class="col-sm-4 col-md-2 hoverer2" >
+          <a href="#" target="_blank">
+            <img class="img-fluid icon" src="img/icons/soulfarer.png"> </a>
+        </div>
+        <div class="col-sm-4 col-md-2 hoverer2" >
+          <a href="https://fishean.itch.io/awims" target="_blank">
+            <img class="img-fluid icon" src="img/icons/america.png"> </a>
+        </div>
+        <div class="col-sm-4 col-md-2 hoverer2" >
+          <a href="#" target="_blank">
+            <img class="img-fluid icon" src="img/icons/incursion.png"> </a>
+        </div>
+      </div>
+      <br/><br/>
+      <h4 class="text-center">special thanks to the other USC AGP 2020 directors!</h3>
+        <p class="text-center">couldn't have done it without the support ♡ check these games out!</h5>
     </div>
-  </section> -->
+  </section> 
 
   <!-- CONTACT FORM -->
   <section class="page-section" id="contact">
