--- a/index.html
+++ b/index.html
@@ -35,11 +35,11 @@
       <a class="navbar-brand js-scroll-trigger" href="#page-top">
         <img src="img/logos/logo0.png" style="height:55px" alt=""> <!--nav logo-->
       </a>
-
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         Menu
         <i class="fas fa-bars"></i>
       </button>
+      
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav text-uppercase ml-auto">
           <li class="nav-item">
@@ -57,6 +57,25 @@
         </ul>
       </div>
     </div>
+
+    <div class="row align-items-center">
+      <div class="col-md">
+        <ul class="list-inline">
+          <li class="list-inline-item col-sm-4">
+            <a href="https://fb.com/shortstackedgame/" target="_blank">
+              <i class="fab fa-facebook-square"></i>
+            </a>
+          </li>
+          <li class="list-inline-item">
+            <a href="https://www.instagram.com/shortstackedgame/" target="_blank">
+              <i class="fab fa-instagram"></i>
+            </a>
+          </li>
+          <li class="list-inline-item"></li>
+        </ul>
+      </div>
+    </div>
+    
   </nav>
 
   <!-- TITLE HEADER -->
@@ -149,7 +168,7 @@
             <img class="img-fluid icon" src="img/icons/koa.png"> </a>
         </div>
         <div class="col-sm-4 col-md-2 hoverer2" >
-          <a href="" target="_blank">
+          <a href="https://thewitchlistgame.wixsite.com/website" target="_blank">
             <img class="img-fluid icon" src="img/icons/witchlist.png"> </a>
         </div>
         <div class="col-sm-4 col-md-2 hoverer2" >
@@ -165,7 +184,7 @@
             <img class="img-fluid icon" src="img/icons/beasts.png"> </a>
         </div>
         <div class="col-sm-4 col-md-2 hoverer2" >
-          <a href="#" target="_blank">
+          <a href="https://www.thecandle.info/" target="_blank">
             <img class="img-fluid icon" src="img/icons/candle.png"> </a>
         </div>
         <div class="col-sm-4 col-md-2 hoverer2" >
