--- a/index.html
+++ b/index.html
@@ -39,6 +39,24 @@
         Menu
         <i class="fas fa-bars"></i>
       </button>
+
+      <div class="row">
+        <div class="col-sm">
+          <ul class="list-inline">
+            <li class="list-inline-item">
+              <a href="https://fb.com/shortstackedgame/" target="_blank">
+                <i class="fab fa-facebook-square"></i>
+              </a>
+            </li>
+            <li class="list-inline-item">
+              <a href="https://www.instagram.com/shortstackedgame/" target="_blank">
+                <i class="fab fa-instagram"></i>
+              </a>
+            </li>
+            <li class="list-inline-item"></li>
+          </ul>
+        </div>
+      </div>
       
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav text-uppercase ml-auto">
@@ -54,24 +72,6 @@
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#contact">CONTACT</a>
           </li>
-        </ul>
-      </div>
-    </div>
-
-    <div class="row align-items-center">
-      <div class="col-md">
-        <ul class="list-inline">
-          <li class="list-inline-item col-sm-4">
-            <a href="https://fb.com/shortstackedgame/" target="_blank">
-              <i class="fab fa-facebook-square"></i>
-            </a>
-          </li>
-          <li class="list-inline-item">
-            <a href="https://www.instagram.com/shortstackedgame/" target="_blank">
-              <i class="fab fa-instagram"></i>
-            </a>
-          </li>
-          <li class="list-inline-item"></li>
         </ul>
       </div>
     </div>
