--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta name="author" content="">
 
   <title>ShortStacked</title>
-  <link rel="icon" href="img/logos/logo0.png"> <!--temp-->
+  <link rel="icon" href="img/logos/icon.png"> <!--temp-->
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -20,6 +20,7 @@
   <link href='https://fonts.googleapis.com/css?family=Kaushan+Script' rel='stylesheet' type='text/css'>
   <link href='https://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
   <link href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700' rel='stylesheet' type='text/css'>
+  <link href="https://fonts.googleapis.com/css2?family=Patrick+Hand+SC&display=swap" rel="stylesheet" type='text/css'>
 
   <!-- <link href="css/agency.min.css" rel="stylesheet"> -->
   <link href = "css/main.css" rel="stylesheet">
@@ -127,7 +128,7 @@
   </section>
 
   <!-- PLAY? -->
-  <section class="bg-info page-section" id="play">
+  <section class="bg-dark page-section" id="play">
     <div class="container text-center">
         <a class="btn btn-primary btn-xl" href="#">DOWNLOAD (COMING SOON)</a>
     </div>
@@ -140,7 +141,7 @@
           <img class="img-fluid" src="img/Fampic.png" alt="">
         </a>
         <div class="portfolio-caption">
-          <h4>A FAMILY PHOTO</h4>
+          <h2>A FAMILY PHOTO</h2>
           <p class="text-muted">click it to meet the team!</p>
         </div>
     </div>
@@ -201,7 +202,7 @@
         </div>
       </div>
       <br/><br/>
-      <h4 class="text-center">special thanks to the other USC AGP 2020 directors!</h3>
+      <h2 class="text-center">special thanks to the other USC AGP 2020 directors!</h2>
         <p class="text-center">couldn't have done it without the support ♡ check these games out!</p>
     </div>
   </section> 
