--- a/index.html
+++ b/index.html
@@ -36,11 +36,6 @@
       <a class="navbar-brand js-scroll-trigger" href="#page-top">
         <img src="img/logos/logo0.png" style="height:55px" alt=""> <!--nav logo-->
       </a>
-      <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-        Menu
-        <i class="fas fa-bars"></i>
-      </button>
-
       <div class="row">
         <div class="col-sm">
           <ul class="list-inline">
@@ -58,6 +53,11 @@
           </ul>
         </div>
       </div>
+
+      <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+        Menu
+        <i class="fas fa-bars"></i>
+      </button>
       
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav text-uppercase ml-auto">
@@ -480,7 +480,16 @@
                       <h4>Alex Lyon</h4>
                       <p class="text-muted">Engineer</p>
                       <ul class="list-inline social-buttons">
-                          <!--needs links-->
+                          <li class="list-inline-item">
+                            <a href=" https://github.com/Arcterus" target="_blank">
+                              <i class="fab fa-github"></i>
+                            </a>
+                          </li>
+                          <li class="list-inline-item">
+                            <a href="https://www.linkedin.com/in/alex-lyon-66598b88/" target="_blank">
+                              <i class="fab fa-linkedin-in"></i>
+                            </a>
+                          </li>
                       </ul>
                     </div>
                   </div>
