--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
             <img class="img-fluid icon" src="img/icons/bottles.png"> </a>
         </div>
         <div class="col-sm-4 col-md-2 hoverer2" >
-          <a href="" target="_blank">
+          <a href="http://koagame.com" target="_blank">
             <img class="img-fluid icon" src="img/icons/koa.png"> </a>
         </div>
         <div class="col-sm-4 col-md-2 hoverer2" >
@@ -274,7 +274,7 @@
             </li>
           </ul>
         </div>
-        <div class="col-md-4">
+       <!-- <div class="col-md-4">
           <ul class="list-inline quicklinks">
             <li class="list-inline-item">
               <a href="#">Privacy Policy</a>
@@ -283,7 +283,7 @@
               <a href="#">Terms of Use</a>
             </li>
           </ul>
-        </div>
+        </div> -->
       </div>
     </div>
   </footer>
