--- a/index.html
+++ b/index.html
@@ -104,6 +104,7 @@
           <div class="p-5">
             <h2 class="display-4">HEY, YOU KIDS!</h2>
             <p>ShortStacked is a casual couch co-op game where you play as two comic-book children, getting into comic-worthy shenanigans!</p>
+            <p>Grab a friend and a couple Xbox controllers to don a trenchcoat and finally get some "adulting" done!</p>
           </div>
         </div>
       </div>
@@ -119,7 +120,7 @@
           <div class="col-lg-6 order-lg-1">
             <div class="p-5">
               <h2 class="display-4">ADDITIONAL INFO COMING SOON</h2>
-              <p>it'll be great.</p>
+              <p>it'll be great. Please check out our Facebook or Instagram for more updates!</p>
             </div>
           </div>
         </div>
@@ -130,7 +131,7 @@
   <!-- PLAY? -->
   <section class="bg-dark page-section" id="play">
     <div class="container text-center">
-        <a class="btn btn-primary btn-xl" href="#">DOWNLOAD (COMING SOON)</a>
+        <a class="btn btn-primary btn-xl" href="#">DOWNLOAD (COMING MAY 10th)</a>
     </div>
   </section>
 
