--- a/index.html
+++ b/index.html
@@ -119,8 +119,8 @@
           </div>
           <div class="col-lg-6 order-lg-1">
             <div class="p-5">
-              <h2 class="display-4">ADDITIONAL INFO COMING SOON</h2>
-              <p>it'll be great. Please check out our Facebook or Instagram for more updates!</p>
+              <iframe src="https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2Fuscgames%2Fvideos%2F515750485971601%2F&show_text=0&width=560" 
+                width="560" height="315" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allowFullScreen="true"></iframe>
             </div>
           </div>
         </div>
