--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
             <img class="img-fluid icon" src="img/icons/candle.png"> </a>
         </div>
         <div class="col-sm-4 col-md-2 hoverer2" >
-          <a href="#" target="_blank">
+          <a href="https://soulfarer.com/" target="_blank">
             <img class="img-fluid icon" src="img/icons/soulfarer.png"> </a>
         </div>
         <div class="col-sm-4 col-md-2 hoverer2" >
