--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 </head>
 
 <body id="page-top">
+  
 
   <!-- NAVBAR -->
   <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
@@ -90,6 +91,8 @@
       </div>
     </div>
   </header>
+
+  <a href="parsec_instr.html">instr</a>
 
   <!-- ABOUT THE GAME -->
   <section class="page-section" id="about">
