--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
       </div>
     </div>
   </header>
-  
+
   <!-- ABOUT THE GAME -->
   <section class="page-section" id="about">
     <div class="container">
@@ -132,7 +132,7 @@
   <!-- PLAY? -->
   <section class="bg-dark page-section" id="play">
     <div class="container text-center">
-        <a class="btn btn-primary btn-xl" href="#">DOWNLOAD (COMING MAY 11th)</a>
+        <a class="btn btn-primary btn-xl" href="https://shortstackedgame.itch.io/shortstacked">DOWNLOAD (itch.io)</a>
     </div>
   </section>
 
