--- a/index.html
+++ b/index.html
@@ -499,7 +499,7 @@
                     <div class="team-member">
                       <img class="mx-auto rounded" src="img/team/jessica.png" alt="">
                       <h4>Jessica Shih</h4>
-                      <p class="text-muted">Art Director (2D)</p>
+                      <p class="text-muted">Art Director</p>
                       <ul class="list-inline social-buttons">
                         <li class="list-inline-item">
                           <a href="https://jessicashihart.com" target="_blank">
@@ -523,7 +523,7 @@
                     <div class="team-member">
                       <img class="mx-auto rounded" src="img/team/fiona.JPG" alt="">
                       <h4>Fiona Chen</h4>
-                      <p class="text-muted">Art Director (2D)</p>
+                      <p class="text-muted">Art Director</p>
                       <ul class="list-inline social-buttons">
                         <li class="list-inline-item">
                           <a href="https://fionawlchen.wixsite.com/mysite" target="_blank">
