--- a/index.html
+++ b/index.html
@@ -204,10 +204,11 @@
         </div>
       </div>
       <br/><br/>
-      <h2 class="text-center">special thanks to the other USC AGP 2020 directors!</h2>
-        <p class="text-center">couldn't have done it without the support ♡ check these games out!</p>
+      <h2 class="text-center">shoutout to the USC AGP 2020 games!</h2>
+        <p class="text-center">couldn't have done it without the support ♡ check them out!</p>
     </div>
   </section> 
+
 
   <!-- CONTACT FORM -->
   <section class="page-section" id="contact">
